change steem to blurt

--- a/livechatexample/index.html
+++ b/livechatexample/index.html
@@ -20,7 +20,7 @@
         <select id="usernetworkselect" style="width: 60px;">
             <option>dtc</option>
             <option>hive</option>
-            <option>steem</option>
+            <option>blurt</option>
         </select>
         <input placeholder="Username" id="usernameinput">
         <input placeholder="Private Key (if not using Keychain)" id="keyinput" type="password" style="width: 220px;"><br>
@@ -41,7 +41,7 @@
             <select id="modApprNetwork" style="width: 60px;">
                 <option>dtc</option>
                 <option>hive</option>
-                <option>steem</option>
+                <option>blurt</option>
             </select>
             <input placeholder="Username" id="modApprUser" style="width: 375px;">
             <button type="button" onclick="approveUserBtn()">Approve User</button>
