--- a/livechatexample/index.html
+++ b/livechatexample/index.html
@@ -18,7 +18,7 @@
         <button type="button" onclick="localStorage.clear(); sessionStorage.clear(); alert('storage cleared!')">Clear storage</button>
         <h3>User info</h3>
         <select id="usernetworkselect" style="width: 60px;">
-            <option>dtc</option>
+            <option>avalon</option>
             <option>hive</option>
             <option>blurt</option>
         </select>
@@ -28,7 +28,7 @@
         <input placeholder="AliveDB Public Key" id="streameralivedbpub" style="width: 440px; margin-bottom: 10px;">
         <button type="button" onclick="requestAccess()" id="chataccessbtn">Request Access</button><br>
         <select id="streamnetworkselect" style="width: 60px;">
-            <option>dtc</option>
+            <option>avalon</option>
             <option>hive</option>
         </select>
         <input placeholder="Streamer" id="streamerinput">
@@ -39,7 +39,7 @@
         <button type="button" onclick="modLogin()" id="moderatorloginbtn">Login</button>
         <div id="modZone" style="display: none;">
             <select id="modApprNetwork" style="width: 60px;">
-                <option>dtc</option>
+                <option>avalon</option>
                 <option>hive</option>
                 <option>blurt</option>
             </select>
